<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/cocktail_creating_imageButton"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/add_cocktail_image"
            android:src="@drawable/image_for_creating"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            app:helperText="@string/add_title"
            app:expandedHintEnabled="false"
            android:hint="@string/title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cocktail_creating_imageButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_title_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            app:helperText="@string/optional_field"
            app:expandedHintEnabled="false"
            android:hint="@string/description_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_description_editText"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_recipe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            app:helperText="@string/optional_field"
            app:expandedHintEnabled="false"
            android:hint="@string/recipe_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_recipe_editText"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/item_recipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>