<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/girlImageView"
        android:layout_width="283dp"
        android:layout_height="283dp"
        android:src="@drawable/summer_holidays_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/myCocktailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/my_cocktails"
        android:textColor="@color/my_cocktails_text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/girlImageView"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/addHereTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/add_here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/myCocktailsTextView"
        app:layout_constraintStart_toStartOf="@+id/myCocktailsTextView"
        app:layout_constraintTop_toBottomOf="@+id/myCocktailsTextView"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/arrow1"
        android:contentDescription="@string/lower_arrow"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@+id/addHereTextView"
        app:layout_constraintStart_toStartOf="@+id/addHereTextView"
        app:layout_constraintTop_toBottomOf="@+id/addHereTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cocktailsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/myCocktailsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:src="@drawable/fab_add_img"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/add_new_cocktail" />

</androidx.constraintlayout.widget.ConstraintLayout>